--- a/PartyHub_Project/staticfiles/css/Accounts_css/Users_search.css
+++ b/PartyHub_Project/staticfiles/css/Accounts_css/Users_search.css
@@ -111,3 +111,48 @@
 .add-friend-btn:hover {
     background-color: #007BB5;
 }
+
+/* Пагинация */
+.pagination {
+    text-align: center;
+    margin-top: 40px;
+}
+
+.pagination .step-links {
+    display: inline-block;
+    margin: 10px;
+}
+
+.pagination .pagination-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+    margin: 0 5px;
+    transition: background-color 0.3s;
+}
+
+.pagination .pagination-button:hover {
+    background-color: #0056b3;
+}
+
+.pagination .current {
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #333;
+}
+
+
+.pagination .current {
+    font-size: 16px; /* Увеличаване на текста */
+    font-weight: bold; /* Подчертан за акцент */
+    color: #4CAF50; /* Зелен цвят за отличаване */
+    background-color: #f9f9f9; /* Лека контрастна фонова цветност */
+    border: 2px solid #ddd; /* Рамка за по-добро разделяне */
+    border-radius: 5px; /* Заоблени краища */
+    padding: 10px 15px; /* Пространство около текста */
+    display: inline-block; /* Центриране на съдържанието вътре */
+    text-align: center; /* Подравняване на текста */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Лека сянка за дълбочина */
+}
