--- a/PartyHub_Project/staticfiles/css/Parties_css/live_party.css
+++ b/PartyHub_Project/staticfiles/css/Parties_css/live_party.css
@@ -18,7 +18,7 @@
 
 /* Снимка на партито */
 .party-image {
-    max-width: 100%;
+    max-width: 600px;
     height: auto;
     border-radius: 8px;
     margin-bottom: 30px;
