--- a/PartyHub_Project/staticfiles/css/index.css
+++ b/PartyHub_Project/staticfiles/css/index.css
@@ -5,7 +5,7 @@
     background-position: center center; /* Центрира изображението */
     background-repeat: no-repeat; /* Премахва повторенията на изображението */
     padding: 50px 20px; /* Падаща вътрешност за контейнера */
-    color: white; /* Задава бял текст за контраста върху тъмния фон */
+    color: black; /* Задава бял текст за контраста върху тъмния фон */
     text-align: center; /* Центрира текста */
 }
 
