fix: fixed bugs and make it with cloudinary

--- a/PartyHub_Project/templates/Accounts/profile_edit.html
+++ b/PartyHub_Project/templates/Accounts/profile_edit.html
@@ -44,6 +44,6 @@
             <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
     </div>
-    <script src="{% static 'js/remove_picture_link.js' %}"></script>
+    <script src="{% static 'JS/remove_picture_link.js' %}"></script>
 
 {% endblock %}
