working with cloudinary

--- a/PartyHub_Project/templates/Party/party_edit.html
+++ b/PartyHub_Project/templates/Party/party_edit.html
@@ -29,4 +29,5 @@
         <a href="{% url 'details_party' party.slug %}" class="cancel-button">Cancel</a>
     </form>
 </div>
+    <script src="{% static 'JS/remove_party_clear_picture_link.js' %}"></script>
 {% endblock %}
